# promptgrid-desktop

./: .gitignore  README.md  README.zh-CN.md  agent.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
docs/: decision-log.md  implementation-tasks.md  product-brief.md  provider-responses-api-debug.md  roadmap.md  technical-plan.md
public/: workflows.json
src/: App.tsx  devProviderResponses.ts  i18n.ts  main.tsx  providerCompatibility.ts  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug_log.rs  lib.rs  main.rs  model_config.rs  storage.rs
src/components/: ContextMenu.tsx  GridWorkspace.tsx  ProjectSidebar.tsx  PromptPanel.tsx  SettingsWorkspace.tsx  TopBar.tsx  contextMenuUtils.ts
src/data/: mockProject.ts
src/modules/generation/: taskUtils.ts
src/modules/settings/: SettingsWorkspace.tsx  components.tsx  index.ts  modelSettingsUtils.ts  providerAdapters.ts  settingsDomain.ts  types.ts
src/modules/styles/: styleCatalog.ts
src/modules/workflows/: workflowConfig.ts
src/services/: aiGeneration.ts  debugLogging.ts  localPersistence.ts  modelConfig.ts
src/shared/utils/: collections.ts
src/state/: usePromptGridStore.ts
src/styles/: app.css
